# timeofthestars-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.sh  composer.json  create_admin.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  seed_data.py
app/: admin.py  config.py  logger.py
app/Models/: Championship.php  ChampionshipGame.php  ChampionshipPlayer.php  ChampionshipTeam.php  Game.php  Player.php  Team.php  Tournament.php  TournamentGame.php  TournamentPlayer.php  TournamentTeam.php  User.php
app/db/: __init__.py  base.py  connection.py
app/routers/: __init__.py  championships.py  games.py  players.py  root.py  teams.py  tournaments.py
app/schemas/: __init__.py  championship.py  game.py  player.py  team.py  tournament.py
app/services/: __init__.py  championship_service.py  game_service.py  player_service.py  team_service.py  tournament_service.py
app/utils/: password.py
database/migrations/: 2025_08_01_070637_create_teams_table.php  2025_08_01_070649_create_players_table.php  2025_08_01_070658_create_games_table.php  2025_08_01_070706_create_championships_table.php  2025_08_01_070712_create_championship_team_table.php  2025_08_01_070720_create_championship_match_table.php  2025_08_01_070726_create_tournaments_table.php  2025_08_01_070733_create_tournament_team_table.php  2025_08_01_070748_create_tournament_match_table.php  2025_08_11_062107_create_championship_player_table.php  2025_08_11_062202_create_tournament_player_table.php
database/seeders/: ChampionshipGameSeeder.php  ChampionshipPlayerSeeder.php  ChampionshipSeeder.php  ChampionshipTeamSeeder.php  ChampionshipTeamsSeeder.php  (+12 more)
migrations/: env.py
routes/: api.php
(+43 files in other folders)
